fix dropdown menu alignment to the right

--- a/StratisCore.UI/src/scss/_custom.scss
+++ b/StratisCore.UI/src/scss/_custom.scss
@@ -58,10 +58,17 @@ img {pointer-events: none !important;}
       a {
         &:hover {
           cursor: pointer;
-          .lnr-exit {color: $primary;}
+          .lnr {color: $primary;}
         }
-        .lnr-exit {
-          font-size: 1.5rem;
+        .lnr {
+          font-size: 1.25rem;
+          color: $gray-500;
+        }
+      }
+      .dropdown-menu {
+        .lnr {
+          margin-right: .5rem;
+          font-size: 1rem;
           color: $gray-500;
         }
       }
@@ -168,6 +175,16 @@ img {pointer-events: none !important;}
       padding: 1.125rem 1.25rem 0;
       background-color: $white;
     }
+    .card-body {
+      dl, dt, dd {margin-bottom: 0;}
+    }
+  }
+
+  // no caret
+  .dropdown-menu-nocaret {
+    .dropdown-toggle::after {
+    display:none;
+}
   }
 
   // Toggle
