--- a/StratisCore.UI/src/scss/_variables.scss
+++ b/StratisCore.UI/src/scss/_variables.scss
@@ -87,7 +87,8 @@ $theme-colors: map-merge((
   "light":      $light,
   "dark":       $dark,
   "hot":        $hot,
-  "cold":       $cold
+  "cold":       $cold,
+  "lighter":    $gray-100
 ), $theme-colors);
 // stylelint-enable
 
@@ -495,8 +496,8 @@ $dropdown-border-width:             $border-width !default;
 $dropdown-divider-bg:               $gray-200 !default;
 $dropdown-box-shadow:               0 .5rem 1rem rgba($black,.175) !default;
 
-$dropdown-link-color:               $gray-900 !default;
-$dropdown-link-hover-color:         darken($gray-900, 5%) !default;
+$dropdown-link-color:               $gray-600 !default;
+$dropdown-link-hover-color:         $primary !default;
 $dropdown-link-hover-bg:            $gray-100 !default;
 
 $dropdown-link-active-color:        $component-active-color !default;
@@ -582,21 +583,21 @@ $pagination-padding-x-lg:           1.5rem !default;
 $pagination-line-height:            1.25 !default;
 
 $pagination-color:                  $link-color !default;
-$pagination-bg:                     $white !default;
+$pagination-bg:                     #FAFBFC !default;
 $pagination-border-width:           $border-width !default;
-$pagination-border-color:           #ddd !default;
+$pagination-border-color:           $pagination-bg !default;
 
-$pagination-hover-color:            $link-hover-color !default;
-$pagination-hover-bg:               $gray-200 !default;
-$pagination-hover-border-color:     #ddd !default;
+$pagination-hover-color:            $white !default;
+$pagination-hover-bg:               $primary !default;
+$pagination-hover-border-color:     $pagination-hover-bg !default;
 
-$pagination-active-color:           $white !default;
-$pagination-active-bg:              theme-color("primary") !default;
-$pagination-active-border-color:    theme-color("primary") !default;
+$pagination-active-color:           $gray-800 !default;
+$pagination-active-bg:              $gray-300 !default;
+$pagination-active-border-color:    $pagination-active-bg !default;
 
 $pagination-disabled-color:         $gray-600 !default;
-$pagination-disabled-bg:            $white !default;
-$pagination-disabled-border-color:  #ddd !default;
+$pagination-disabled-bg:            $gray-100 !default;
+$pagination-disabled-border-color:  $pagination-disabled-bg !default;
 
 
 // Jumbotron
@@ -783,7 +784,7 @@ $breadcrumb-padding-y:              .75rem !default;
 $breadcrumb-padding-x:              1rem !default;
 $breadcrumb-item-padding:           .5rem !default;
 
-$breadcrumb-margin-bottom:          1rem !default;
+$breadcrumb-margin-bottom:          0 !default;
 
 $breadcrumb-bg:                     transparent !default;
 $breadcrumb-divider-color:          $gray-600 !default;
